change the structure of project

--- a/time4kids-api/Gemfile
+++ b/time4kids-api/Gemfile
@@ -3,6 +3,7 @@ source 'https://rubygems.org'
 gem 'dotenv-rails', groups: [:development, :test]
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
+gem 'rails-api', '~> 0.4.0'
 # Use mysql as the database for Active Record
 gem 'mysql2', '>= 0.3.13', '< 0.5'
 # See https://github.com/rails/execjs#readme for more supported runtimes
@@ -28,6 +29,7 @@ gem 'simple_form'
 gem 'slim-rails'
 
 gem 'devise'
+gem 'simple_token_authentication'
 gem 'i18n'
 # Use Unicorn as the app server
 gem 'unicorn'
