--- a/time4kids-api/Gemfile
+++ b/time4kids-api/Gemfile
@@ -66,7 +66,7 @@ end
 group :test do
   gem 'rspec-rails'
   gem 'factory_girl_rails'
-  gem 'forgery'
+  gem 'faker'
   gem 'capybara'
   gem 'poltergeist'
   gem 'selenium-webdriver'
