--- a/time4kids-api/Gemfile
+++ b/time4kids-api/Gemfile
@@ -57,6 +57,8 @@ group :development do
   gem 'letter_opener'
   gem 'rubocop'
   gem 'rails_layout'
+  gem 'rspec-rails', '~> 3.4'
+  gem 'factory_girl_rails', '~> 4.5.0'
 end
 
 group :production do
@@ -64,11 +66,10 @@ group :production do
 end
 
 group :test do
-  gem 'rspec-rails'
-  gem 'factory_girl_rails'
-  gem 'faker'
+  gem 'shoulda-matchers', '~> 3.0', require: false
+  gem 'database_cleaner', '~> 1.5'
+  gem 'faker', '~> 1.6.1'
+  gem 'simplecov', :require => false
   gem 'capybara'
   gem 'poltergeist'
-  gem 'selenium-webdriver'
-  gem 'database_cleaner'
 end
