--- a/time4kids-api/Gemfile
+++ b/time4kids-api/Gemfile
@@ -40,7 +40,7 @@ gem 'responders'
 gem 'dry-validation'
 gem 'kleisli'
 
-# gem 'active_model_serializers'
+gem 'active_model_serializers', '~> 0.10.0'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
