add support for geocoding

--- a/env.template
+++ b/env.template
@@ -1,3 +1,5 @@
 SMTP_USERNAME=real username
 SMTP_PASSWORD=real username
 SECRET_KEY_BASE=generated secret key
+REDIS_HOST=hostname
+REDIS_PORT=portnumber
